# mira-amm-web

./: .env.backup  .env.dev.local.example  .env.development.mock  .env.example  .envrc  .eslintignore  .eslintrc.json  .gitignore  .gitmodules  .lintstagedrc.json  .prettierignore  .prettierrc  CHANGELOG.md  CLAUDE.md  Cargo.toml  INDEXER-SETUP-GUIDE.md  README.md  commitlint.config.ts  devenv.nix  devenv.yaml  hello-test  install  jest.config.ts  migrations.json  next.config.mjs  nx.json  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  release.config.ts  rustfmt.toml  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  shell.nix  test-formatting.js  tsconfig.base.json  tsconfig.json  (+2 more)
app/: layout.tsx  (+2 more)
libs/contracts/: Cargo.toml  Forc.toml  README.md  fuel-toolchain.toml  project.json
libs/contracts/libraries/interfaces/src/: errors.sw  events.sw
libs/contracts/libraries/math/src/: pool_math.sw
libs/contracts/libraries/utils/src/: src20_utils.sw
libs/contracts/mira_amm_contract/: Forc.toml
libs/contracts/mira_amm_contract/src/: main.sw
libs/contracts/mira_amm_contract/tests/functions/: burn.rs  mint.rs  swap.rs
libs/contracts/mira_validation_hook/: Forc.toml
libs/contracts/mocks/mock_token/: Forc.toml
libs/contracts/mocks/mock_token/src/: main.sw
libs/contracts/test-harness/: Cargo.toml
libs/contracts/test-harness/src/: data_structures.rs  interface.rs  lib.rs  setup.rs  types.rs
libs/mira-v1-periphery/scripts/add_liquidity_script/: Cargo.toml
libs/rust-sdk/: Cargo.toml  project.json
libs/rust-sdk/scripts/: fetch_abis.sh
libs/rust-sdk/src/: constants.rs  interface.rs  lib.rs  mira_amm.rs  pool_math.rs  readonly_mira_amm.rs  utils.rs
libs/scripts/: Cargo.toml  Forc.toml  README.md  project.json
libs/scripts/fixtures/mira-amm/: mira_amm_contract-storage_slots.json
libs/scripts/fixtures/mock-token/: mock_token-abi.json
libs/scripts/libraries/interfaces/src/: data_structures.sw  lib.sw
libs/scripts/libraries/math/: Forc.toml
libs/scripts/libraries/math/src/: pool_math.sw
libs/scripts/libraries/utils/src/: lib.sw
libs/scripts/scripts/add_liquidity_script/: Forc.toml
libs/scripts/scripts/add_liquidity_script/src/: main.sw
libs/scripts/scripts/create_pool_and_add_liquidity_script/src/: main.sw
libs/scripts/scripts/remove_liquidity_script/: Cargo.toml  Forc.toml
libs/scripts/scripts/remove_liquidity_script/src/: main.sw
libs/scripts/scripts/swap_exact_input_script/: Cargo.toml  Forc.toml
libs/scripts/scripts/swap_exact_input_script/src/: main.sw
libs/scripts/scripts/swap_exact_input_script/tests/: harness.rs
libs/scripts/scripts/swap_exact_output_script/: Forc.toml
libs/scripts/test-harness/: Cargo.toml
libs/scripts/test-harness/src/: data_structures.rs  interface.rs  setup.rs  utils.rs
libs/scripts/tools/: fetch_abis.sh
(+2938 files in other folders)
